# forextester_backtest

./: .gitignore  README.md  pyproject.toml
docs/: eurusd_optimization.md  jpy_cross_rr1_optimization.md  usdjpy_optimization.md  xauusd_optimization.md
scripts/: eurusd_pair_preset.json  jpy_cross_rr1_risk_results.json  jpy_cross_rr1_signal_results.json  optimize_jpy_crosses.py  optimize_usdjpy.py  optimize_xauusd.py  usdjpy_seed_target_035_long.json  xauusd_optimization_results.json  xauusd_rr1_candidate.json  xauusd_rr1_context_results.json  xauusd_rr1_risk_results.json  xauusd_rr1_signal_results.json
scripts/tradingview/: README.md  tamukai_pair_signal_indicator.pine
src/forextester_backtest/: __init__.py  cli.py  data.py  engine.py  models.py  presets.py  strategies.py  tamukai.py
tests/: test_history_and_backtest.py
