[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forextester-backtest"
version = "0.1.0"
description = "Backtest a 4H Dow and 1H pullback-range strategy with Forex Tester 6 data"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MPL-2.0"}
authors = [{name = "forextester_backtest contributors"}]
dependencies = []

[project.scripts]
forextester-backtest = "forextester_backtest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
